# FutureHome

./: .gitignore  Dockerfile  Makefile  README.md  app.py  data.dvc  df.pkl  models.dvc  projectData.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci_cd.yaml
FutureHome/data/: data_flats_preprocessing.py  data_houses_preprocessing.py  data_processing_level_2.py  feature_engineering.py  feature_selection.py  final_preprocessing.py  merge_flats_and _houses.py  missing_value_imputation.py  outlier_treatment.py
FutureHome/modeling/: predict.py  train.py
notebooks/: data-preprocessing-flats.ipynb  data-preprocessing-houses.ipynb  feature-selection.ipynb  missing-value-imputation.ipynb  model-selection.ipynb  outlier-treatment.ipynb  recommender_system.ipynb
pages/: 1_Price Predictor.py  2_Analysis.py  3_Recommender.py  Price Predictor.py  analysis.py  price_predictor.py
projectData/: cosine_sim1.pkl  cosine_sim2.pkl  cosine_sim3.pkl  features.pkl  location_df.pkl
utils/: app_analysis.ipynb
