[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FutureHome"
version = "0.0.1"
description = "FutureHome combines innovative data analytics with real estate expertise to offer accurate property predictions, thorough analysis, and personalized recommendations"
authors = [
  { name = "khush joshi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["FutureHome"]
force_sort_within_sections = true
